--- a/report/paper.tex
+++ b/report/paper.tex
@@ -97,9 +97,9 @@ We have observed that Linear Regression has a strange behavior during training d
 
 \subsection{Neural Network Models}
 \label{sec:nnmodel}
-We have implemented two models for neural network, the first one with 1 loss and the second one with 2 losses, as showed in Fig. \ref{fig:nn1} and Fig. \ref{fig:nn2}. Both models use the same feature extractors but they differs for the classifier(s). The first one has a boolean classifier that compares the two digits visible in the two images. The second model, it has also a digit classifier that returns the corresponding digit for both the handwritten images. Note that for the digit classification we have used the hot encoding to give a target to each node of he output layer.
+We have implemented two models for neural network, the first one with 1 loss and the second one with 2 losses, as showed in Fig. \ref{fig:nn1} and Fig. \ref{fig:nn2}. Both models use the same feature extractors but they differs for the classifier(s). The first one has a boolean classifier that compares the two digits visible in the two images. The second model, it has also a digit classifier that returns the corresponding digit for both the handwritten images. Note that for the digit classification we have used the hot encoding to give a target to each node of the output layer.
 As with the previously explained linear models, the inputs are flattened to obtain a vector of features for each sample.
-Since the feature extractor processes both images together (it does not consider the two images independently), we decided to use a digit classifier with $20$ nodes as output ($10$ nodes for each digit; i.e. from $0$ to $9$ as value of digit). We have noticed that NN with 2 losses seems to perform slightly worse during the test than the model with 1 loss (see Table \ref{table:accuracy}). This is in contrast with what we were expecting. However, we believe that the use of two losses can improve the performance of the model only if the latter is more powerful enough, otherwise it can negatively affect the accuracy (as in our case). We could have improved the computation considering both the images independently, i.e. processing them independently but with the same network.
+Since the feature extractor processes both images together (it does not consider the two images independently), we decided to use a digit classifier with $20$ nodes as output ($10$ nodes for each digit; i.e. from $0$ to $9$ as value of digit). We have noticed that NN with 2 losses seems to perform slightly worst during the test than the model with 1 loss (see Table \ref{table:accuracy}). This is in contrast with what we were expecting. However, we believe that the use of two losses can improve the performance of the model only if the latter is more powerful enough, otherwise it can negatively affect the accuracy (as in our case). We could have improved the computation considering both the images independently, i.e. processing them independently but with the same network.
 
 \begin{figure}[!h]
     \centering
