--- a/BoxPlot_generator.ipynb
+++ b/BoxPlot_generator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +26,7 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from matplotlib.patches import Polygon\n",
@@ -43,7 +44,7 @@
     "data = [linreg, logreg, nn1, nn2, cnn1, cnn2]\n",
     "\n",
     "fig, ax1 = plt.subplots(figsize=(6, 6))\n",
-    "fig.canvas.set_window_title('A Boxplot Example')\n",
+    "fig.canvas.set_window_title('Boxplots')\n",
     "fig.subplots_adjust(left=0.075, right=0.95, top=0.9, bottom=0.25)\n",
     "\n",
     "bp = ax1.boxplot(data, notch=0, sym='+', vert=1, whis=1.5)\n",
@@ -51,8 +52,7 @@
     "plt.setp(bp['whiskers'], color='black')\n",
     "plt.setp(bp['fliers'], color='red', marker='+')\n",
     "\n",
-    "ax1.yaxis.grid(True, linestyle='-', which='major', color='lightgrey',\n",
-    "               alpha=0.5)\n",
+    "ax1.yaxis.grid(True, linestyle='-', which='major', color='lightgrey', alpha=0.5)\n",
     "\n",
     "# Hide these grid behind plot objects\n",
     "ax1.set_axisbelow(True)\n",
@@ -112,7 +112,7 @@
     "             horizontalalignment='center', size='x-small', weight=weights[k],\n",
     "             color=boxColors[k])\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
@@ -132,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
